@@ -1,6 +1,8 @@
 2012-02-19 Guido Scholz <guido.scholz@bayernline.de>
 	* src/aboutdialog.*, src/mainwindow.cpp, src/modularsynth.*: Add
 	new about dialog.
+	* src/modularsynth.cpp, src/module.*, src/port.*: Fix update of
+	jack and cable color if modified by context menu.
 
 2012-02-18 Guido Scholz <guido.scholz@bayernline.de>
 	* demos/analog_memory_1.ams, demos/bitgrinder_1.ams,
